<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>console_bridge</name>
  <version>:{version}</version>
  <description>ROS-independent package for logging that seamlessly pipes into rosconsole/rosout for ROS-dependent packages.</description>
  <maintainer email="steven@openrobotics.org">Steven! Ragnarök</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>

